# agentLIBRE

./: .gitmodules  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.MD  TRADEMARKS.md
.github/workflows/: ci.yml
LICENSES/: AGENTS.md  LicenseRef-agentLIBRE-Commercial.md
assets/audits/: tool-lens.toml
assets/cli-help/: agl.md  chat.md  completion.md  config.md  cron.md  daemon.md  function.md  generate.md  inference.md  init.md  install-hooks.md  memory.md  notes.md  repo.md  run.md  serve.md  skill.md  status.md  store.md  welcome.md
build-support/: llama_cpp.rs
crates/: AGENTS.md
crates/agentlibre-agent-loop/: Cargo.toml
crates/agentlibre-agent-loop/src/: lib.rs
crates/agentlibre-observability/: Cargo.toml
crates/agentlibre-tool-protocol/: Cargo.toml
crates/agl-actions/: AGENTS.md  Cargo.toml
crates/agl-assets/: AGENTS.md  Cargo.toml  build.rs
crates/agl-capabilities/: Cargo.toml
crates/agl-capabilities/src/: action.rs  declaration.rs  delegation.rs  digest.rs  hook.rs  ids.rs  lib.rs  policy.rs  schema.rs  tests.rs
crates/agl-chat/: Cargo.toml  build.rs
crates/agl-chat/src/: delegation.rs  inference_client.rs  lib.rs  loop_host.rs  options.rs  service.rs  session.rs  supervised_chat.rs  supervisor_driver.rs  terminal.rs  tools.rs  turn_runtime.rs
crates/agl-chat/src/session/: tests.rs
crates/agl-cli/: AGENTS.md  Cargo.toml  build.rs
crates/agl-cli/src/: AGENTS.md  args.rs  chat.rs  config.rs  event_sink.rs  function.rs  init.rs  lib.rs  loop_host.rs  main.rs  memory.rs  notes.rs  prompt.rs  repo.rs  session.rs  store.rs  terminal.rs
crates/agl-cli/src/args/: model.rs  tests.rs
crates/agl-cli/tests/: cli_surface.rs
crates/agl-client/: Cargo.toml
crates/agl-daemon/: Cargo.toml  build.rs
crates/agl-daemon/src/: error.rs  lib.rs  options.rs  run_factory.rs  scheduler.rs  server.rs  state.rs  tests.rs  transcript.rs
crates/agl-functions/: Cargo.toml
crates/agl-functions/src/: lib.rs  loader.rs  locator.rs  manifest.rs  render.rs  runtime.rs  status.rs  subagent.rs  validation.rs
crates/agl-functions/src/tests/: builtin.rs  manifest.rs  mod.rs  resolution.rs  subagent.rs
crates/agl-host-tools/: Cargo.toml
crates/agl-host-tools/src/: lib.rs  screen.rs  skills.rs
crates/agl-inference/: AGENTS.md  Cargo.toml  build.rs
crates/agl-inference/src/: AGENTS.md  attempt_fsm.rs  backend.rs  fake.rs  lib.rs  llama_cpp.rs  tests.rs
crates/agl-inference/src/evidence/: AGENTS.md  artifact.rs  event.rs  ids.rs  mod.rs  tests.rs
crates/agl-inference/src/llama_cpp/: AGENTS.md  abi_guard.cpp  chat_template_bridge.cpp  context_slot.rs  ffi.rs  generation.rs  invocation.rs  mod.rs  model.rs  mtmd_bridge.cpp  mtp_speculative_bridge.cpp  runtime.rs  session.rs
crates/agl-inference/src/llama_cpp/context_slot/: decode.rs  mod.rs  mtp.rs  native.rs  prompt.rs  tests.rs
crates/agl-inference/src/model_manager/: evidence.rs  mod.rs  runtime.rs  tests.rs  types.rs  worker.rs
crates/agl-loop/: AGENTS.md  Cargo.toml
crates/agl-loop/src/: AGENTS.md  effect.rs  event_map.rs  executor.rs  host.rs  input.rs  lib.rs  model.rs  output.rs  runner.rs  state.rs  tests.rs  tool.rs  turn.rs
crates/agl-loop/tests/: AGENTS.md
crates/agl-matrix-bridge/: Cargo.toml  README.md
crates/agl-matrix-bridge/examples/: config.toml
crates/agl-matrix-bridge/src/: access.rs  app.rs  client.rs  command.rs  config.rs  handler.rs  lib.rs  main.rs  outbox_delivery.rs  runtime.rs  state.rs  thread_binding.rs
crates/agl-matrix-bridge/src/runtime/: tests.rs
crates/agl-matrix-bridge/tests/: bridge_surface.rs
crates/agl-oven/: AGENTS.md  Cargo.toml
crates/agl-oven/src/: AGENTS.md  lib.rs  render.rs  tests.rs
crates/agl-runtime/: AGENTS.md  Cargo.toml
crates/agl-runtime/src/: AGENTS.md  capabilities.rs  config.rs  features.rs  lib.rs  paths.rs  session.rs  tracing_setup.rs
crates/agl-session/: AGENTS.md  Cargo.toml
crates/agl-session/src/: fsm.rs  lib.rs  store.rs  tests.rs
crates/agl-skills/: AGENTS.md  Cargo.toml
crates/agl-skills/src/: audit.rs  context.rs  lib.rs  manifest.rs  pack.rs  registry.rs  workspace.rs
crates/agl-skills/src/workspace/: tests.rs
crates/agl-skills/tests/testdata/repo-workflow-pack/: pack.toml
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-change/: SKILL.md
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-commit/: SKILL.md
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-review-pack/: SKILL.md
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-rust/: SKILL.md
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-skill-author/: SKILL.md
crates/agl-skills/tests/testdata/repo-workflow-pack/agl/repo-task-spec/: SKILL.md
crates/agl-store/: Cargo.toml
crates/agl-store/src/: artifacts.rs  connection.rs  error.rs  export.rs  idempotency.rs  lib.rs  matrix_outbox.rs  migrations.rs  path.rs  permissions.rs  runs.rs  schema.rs  status.rs  tests.rs  types.rs  util.rs
crates/agl-tools/: AGENTS.md  Cargo.toml
crates/agl-tools/src/: cron.rs  fs.rs  guards.rs  hook.rs  ids.rs  lib.rs  matrix.rs  matrix_delivery.rs  memory.rs  notes.rs  permissions.rs  provider.rs  registry.rs  repo.rs  skills.rs  store.rs  test_support.rs  tests.rs  tool.rs
crates/agl-tools/src/cron/: declarations.rs  tests.rs
crates/agl-tools/src/guards/: tests.rs  validators.rs
crates/agl-turn/: AGENTS.md  Cargo.toml
crates/agl-turn/src/: AGENTS.md  fsm.rs  hook.rs  input.rs  lib.rs  output.rs  policy.rs  state.rs  tests.rs  tool.rs  transcript.rs
docs/: index.md  local-llama-smoke.md
nix/: agl-local-vulkan.nix
scripts/: AGENTS.md  agentlibre-daemon-systemd-service.sh  agentlibre-matrix-bridge-systemd-service.sh  agentlibre-matrix-login-password.sh  agl-daemon-live-smoke.sh  agl-matrix-verify-device-smoke.sh  agl-nix-vulkan.sh  build-llama-cpp.sh  bump-workspace-version.sh  install-agl-cargo.sh  smoke-agentlibre-llama-cpp.sh  smoke-agentlibre-multiturn-flows.sh  smoke-agentlibre-skill-tools.sh  smoke-agentlibre-tools-pack.sh  smoke-lib.sh  systemd-lib.sh
(+255 files in other folders)
