[workspace]
members = [
    "crates/agl-assets",
    "crates/agl-capabilities",
    "crates/agl-chat",
    "crates/agl-client",
    "crates/agl-cli",
    "crates/agl-cron",
    "crates/agl-daemon",
    "crates/agl-functions",
    "crates/agl-tools",
    "crates/agl-hooks",
    "crates/agl-host-tools",
    "crates/agl-ids",
    "crates/agl-inference",
    "crates/agl-llama-cpp-sys",
    "crates/agl-loop",
    "crates/agl-memory",
    "crates/agl-notes",
    "crates/agl-oven",
    "crates/agl-protocol",
    "crates/agl-repo",
    "crates/agl-session",
    "crates/agl-skills",
    "crates/agl-turn",
    "crates/agl-config",
    "crates/agl-content",
    "crates/agl-events",
    "crates/agl-actions",
    "crates/agl-runtime",
    "crates/agl-store",
    "crates/agl-supervisor",
    "crates/agl-matrix-bridge",
]
resolver = "3"

[workspace.package]
version = "1.0.0-alpha.10"
edition = "2024"
license = "LGPL-3.0-or-later"
repository = "https://github.com/agentlibre/agentLIBRE"

[workspace.dependencies]
agl-capabilities = { path = "crates/agl-capabilities" }
agl-events = { path = "crates/agl-events" }
agl-actions = { path = "crates/agl-actions" }
agl-assets = { path = "crates/agl-assets" }
agl-chat = { path = "crates/agl-chat" }
agl-client = { path = "crates/agl-client" }
agl-cron = { path = "crates/agl-cron" }
agl-daemon = { path = "crates/agl-daemon" }
agl-functions = { path = "crates/agl-functions" }
agl-turn = { path = "crates/agl-turn" }
agl-config = { path = "crates/agl-config" }
agl-content = { path = "crates/agl-content" }
agl-tools = { path = "crates/agl-tools" }
agl-hooks = { path = "crates/agl-hooks" }
agl-host-tools = { path = "crates/agl-host-tools" }
agl-ids = { path = "crates/agl-ids" }
agl-inference = { path = "crates/agl-inference" }
agl-llama-cpp-sys = { path = "crates/agl-llama-cpp-sys" }
agl-loop = { path = "crates/agl-loop" }
agl-memory = { path = "crates/agl-memory" }
agl-notes = { path = "crates/agl-notes" }
agl-oven = { path = "crates/agl-oven" }
agl-protocol = { path = "crates/agl-protocol" }
agl-repo = { path = "crates/agl-repo" }
agl-runtime = { path = "crates/agl-runtime" }
agl-session = { path = "crates/agl-session" }
agl-skills = { path = "crates/agl-skills" }
agl-store = { path = "crates/agl-store" }
agl-supervisor = { path = "crates/agl-supervisor" }
anyhow = "1.0"
ashpd = { version = "0.13.12", default-features = false, features = ["documents", "screenshot", "tokio"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "6"
futures-util = "0.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
matrix-sdk = { version = "=0.14.0", default-features = false, features = ["bundled-sqlite", "e2e-encryption", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1.2"
jsonschema = { version = "0.47", default-features = false }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
url = "2"
