[package]
name = "agl-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-ids.workspace = true
jsonschema.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
