[package]
name = "agl-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
agl-capabilities.workspace = true
agl-assets.workspace = true
agl-config.workspace = true
agl-content.workspace = true
agl-events.workspace = true
agl-functions.workspace = true
agl-host-tools.workspace = true
agl-ids.workspace = true
agl-inference.workspace = true
agl-loop.workspace = true
agl-memory.workspace = true
agl-oven.workspace = true
agl-runtime.workspace = true
agl-session.workspace = true
agl-skills.workspace = true
agl-store.workspace = true
agl-supervisor.workspace = true
agl-tools.workspace = true
agl-turn.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
