[package]
name = "agl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
autobins = false

[[bin]]
name = "agl"
path = "src/main.rs"

[dependencies]
agl-chat.workspace = true
agl-tools.workspace = true
agl-loop.workspace = true
agl-runtime.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
