[package]
name = "agl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-chat.workspace = true
agl-cron.workspace = true
agl-protocol.workspace = true
agl-runtime.workspace = true
agl-session.workspace = true
agl-store.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
