[package]
name = "agl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
agl-chat.workspace = true
agl-cron.workspace = true
agl-content.workspace = true
agl-events.workspace = true
agl-functions.workspace = true
agl-ids.workspace = true
agl-inference.workspace = true
agl-protocol.workspace = true
agl-runtime.workspace = true
agl-session.workspace = true
agl-store.workspace = true
agl-supervisor.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
agl-client.workspace = true
agl-config.workspace = true
