[package]
name = "agl-functions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-assets.workspace = true
agl-capabilities.workspace = true
agl-config.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
