[package]
name = "agl-host-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-capabilities.workspace = true
agl-skills.workspace = true
agl-tools.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
