[package]
name = "agl-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-config.workspace = true
agl-llama-cpp.workspace = true
agl-model.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
