[package]
name = "agl-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
agl-config.workspace = true
agl-oven.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
