[package]
name = "agl-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
agl-actions.workspace = true
agl-config.workspace = true
agl-oven.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[build-dependencies]
cc = "1.2"
