[package]
name = "agl-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-tools.workspace = true
agl-events.workspace = true
agl-actions.workspace = true
agl-turn.workspace = true
anyhow.workspace = true
serde_json.workspace = true
