[package]
name = "agl-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-capabilities.workspace = true
agl-events.workspace = true
agl-ids.workspace = true
agl-actions.workspace = true
agl-turn.workspace = true
serde.workspace = true
serde_json.workspace = true
