[package]
name = "agl-matrix-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-client.workspace = true
agl-protocol.workspace = true
agl-store.workspace = true
agl-tools.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
matrix-sdk.workspace = true
pbkdf2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
