[package]
name = "agl-matrix-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-capabilities.workspace = true
agl-client.workspace = true
agl-ids.workspace = true
agl-protocol.workspace = true
agl-store.workspace = true
agl-tools.workspace = true
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
matrix-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
