[package]
name = "agl-oven"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-capabilities.workspace = true
agl-config.workspace = true
agl-ids.workspace = true
agl-turn.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
