[package]
name = "agl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
serde.workspace = true
toml.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
