[package]
name = "agl-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-assets.workspace = true
agl-repo.workspace = true
agl-tools.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true
