[package]
name = "agl-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-content.workspace = true
agl-events.workspace = true
agl-ids.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
