[package]
name = "agl-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-cron.workspace = true
agl-memory.workspace = true
agl-notes.workspace = true
agl-repo.workspace = true
agl-store.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
