[package]
name = "agl-turn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agl-actions.workspace = true
agl-capabilities.workspace = true
agl-content.workspace = true
agl-ids.workspace = true
serde.workspace = true
serde_json.workspace = true
